<resources>
    <string name="app_name">ToDoApp</string>
    <string name="app_mail">mail@mail.com</string>
    <string name="app_password">iii123</string>
    <string name="welcome">"Welcome !"</string>
    <string name="title_activity_login">Your Login Activity Title</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="high">High</string>
    <string name="add">Add</string>
    <string name="end_date">End Date</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
</resources>