<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:hint="@string/title" />


    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_marginBottom="17dp"
        android:hint="@string/description" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="17dp">

        <RadioButton
            android:id="@+id/radioHigh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/high" />

        <RadioButton
            android:id="@+id/radioMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/radioLow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/low" />
    </RadioGroup>

    <EditText
        android:id="@+id/etEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:hint="@string/end_date" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add" />

</LinearLayout>
